Fix issue where long track name would squash artwork

--- a/cmd/tchaik/ui/static/sass/bottom.scss
+++ b/cmd/tchaik/ui/static/sass/bottom.scss
@@ -99,6 +99,7 @@ div#bottom {
 
         &.visible {
           display: inline;
+          flex-shrink: 0;
           max-height: $bottom-row-height - $progressbar-height;
         }
       }
